--- a/src/components/CardList.css
+++ b/src/components/CardList.css
@@ -1,5 +1,3 @@
-.main-div {
-    padding-top: 25px;
-    height: 100vh;
-    background-color: rgb(29, 23, 63);
+.card-list-div {
+    padding: 25px;
 }
